<resources>
    <string name="app_name">职霸</string>
    <string name="http_unknown_error">请求出错，未知错误</string>
    <string name="http_account_error">账号异常，请重新登录</string>
    <string name="http_data_explain_error">数据解析异常，请稍后</string>
    <string name="http_server_out_time">服务器请求超时，请稍后再试</string>
    <string name="http_network_error">请求失败，请检查网络设置</string>
    <string name="http_response_error">服务器响应异常，请稍后再试</string>
    <string name="http_server_error">服务器连接异常，请稍后再试</string>
    <string name="http_request_cancel">请求被中断，请重试</string>

    <!-- 提示布局 -->
    <string name="hint_layout_no_data">空空如也</string>
    <string name="hint_layout_error_request">请求出错，点击重试</string>
    <string name="hint_layout_error_network">网络错误，点击重试</string>

    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unsupported">不支持错误</string>
    <string name="errcode_unknown">发送返回</string>

    <string name="common_phone_input_hint">输入手机号码</string>
    <string name="common_phone_input_error">手机号输入不正确</string>

    <string name="common_password_input_error">请输入密码</string>
    <string name="common_password_input_unlike">两次密码输入不一致，请重新输入</string>

    <string name="common_code_input_hint">输入验证码</string>
    <string name="common_code_send">发送验证码</string>
    <string name="common_code_send_hint">验证码已发送，请注意查收</string>
    <string name="common_code_error_hint">验证码错误，请检查输入</string>
    <string name="register_succeed">注册成功</string>
    <string name="common_step_next">下一步</string>
    <string name="common_step_complete">完成</string>
    <string name="common_step_commit">提交</string>

    <string name="text_bar_hide">隐藏全部</string>
    <string name="text_bar_show">恢复显示</string>
    <string name="text_scanner">扫一扫</string>
    <string name="text_search">搜一搜</string>
    <string name="todo">TODO</string>
    <string name="text_more">更多</string>
    <string name="home_home">首页</string>
    <string name="home_job">职场</string>
    <string name="home_workspace">工作台</string>
    <string name="home_message">消息</string>
    <string name="home_mine">我的</string>
    <string name="explain">客服电话 088-065-6688      工作时间 9:00-18:00</string>
    <string name="authentication">资质认证</string>
    <string name="organization">我的组织</string>
    <string name="feedback">帮助反馈</string>
    <string name="aboutme">关于我们</string>
    <string name="workspace">工作台</string>
    <string name="systemnotice">系统通知</string>
    <string name="set">设置</string>

    <string name="clearContent">清除缓存</string>
    <string name="personal">个人资料</string>
    <string name="account">账号与绑定</string>
    <string name="notification">通知设置</string>
    <string name="privacy">隐私设置</string>
    <string name="callSet">打招呼设置</string>
    <string name="logout">退出登录</string>
    <string name="name">姓名</string>
    <string name="sex">性别</string>
    <string name="brithday">生日</string>
    <string name="companyAuth">企业认证</string>
    <string name="assessAuth">评估师认证</string>
    <string name="companyAuthExplain">完成营业执照认证后可发布职位</string>
    <string name="assessAuthExplain">完成资格认证可评估简历</string>
    <string name="auditAuth">审核认证信息</string>>

    <string name="changeMobile">修改手机号码</string>
    <string name="phoneTag">+86</string>
    <string name="verify">验证码</string>
    <string name="sureChangeButton">确认修改手机号码</string>
    <string name="currentMobile">当前手机号</string>
    <string name="inputNewPhone">输入新手机号</string>
    <string name="inputVeryfy">输入验证码</string>
    <string name="getVeryfy">获取验证码</string>
    <string name="common_loading">加载中&#8230;</string>

    <string name="versionUpdate">版本更新</string>
    <string name="privacyPolicy">隐私政策</string>
    <string name="useragreement">用户协议</string>

    <string name="common_confirm">确定</string>
    <string name="common_cancel">取消</string>

    <string name="common_year">年</string>
    <string name="common_month">月</string>
    <string name="common_day">日</string>

    <string name="common_hour">时</string>
    <string name="common_minute">分</string>
    <string name="common_second">秒</string>

    <string name="common_permission_hint">请先授予权限</string>
    <string name="common_permission_fail">授权失败，请手动授予权限</string>
    <string name="common_network">当前没有网络连接，请检查网络设置</string>
    <!-- 选择对话框 -->
    <string name="select_min_hint">至少要选择 %d 项</string>
    <string name="select_max_hint">最多只能选择 %d 项</string>

    <!-- 地区对话框 -->
    <string name="address_title">请选择地区</string>
    <string name="address_hint">请选择</string>

    <!-- 日期对话框 -->
    <string name="date_title">请选择日期</string>

    <!-- 时间对话框 -->
    <string name="time_title">请选择时间</string>
    <!-- 图片选择 -->
    <string name="image_select_title">图片选择</string>
    <string name="image_select_all">所有图片</string>

    <string name="image_select_total">共 %d 张</string>

    <string name="image_select_max_hint">本次最多只能选择 %d 张图片</string>

    <!-- 拍照 -->
    <string name="camera_launch_fail">无法启动相机</string>
    <string name="camera_image_error">目标地址错误</string>
    <string name="title_activity_browser">BrowserActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="update_permission_hint">必须先要授予权限才能正常下载更新哦</string>

    <string name="update_status_start">正在下载</string>
    <string name="update_status_running">下载中 %d%%</string>
    <string name="update_status_successful">下载完成，点击安装</string>
    <string name="update_status_failed">下载失败，点击重试</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_s_b_web">SBWebActivity</string>

</resources>