<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".module.mine.aboutme.AboutmeActivity">


    <com.hjq.bar.TitleBar
        android:id="@+id/commonTitleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/aboutme" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="214dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="90dp"
            android:layout_height="92dp"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@mipmap/smalllogo" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="职霸"
            android:textColor="#333333"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

        <TextView
            android:id="@+id/currentTextView"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_marginTop="4dp"
            android:text="Version 1.0.1"
            android:textColor="#333333"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.boc.jobleader.custom.SettingBar
        android:id="@+id/versionUpdate"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:bar_leftText="@string/versionUpdate"
        app:bar_rightText=""
        app:bar_rightIcon="@mipmap/icon_arrow_right" />

    <com.boc.jobleader.custom.SettingBar
        android:id="@+id/userPravicy"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:bar_leftText="@string/privacyPolicy"
        app:bar_rightIcon="@mipmap/icon_arrow_right" />

    <com.boc.jobleader.custom.SettingBar
        android:id="@+id/userAgree"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:bar_leftText="@string/useragreement"
        app:bar_rightIcon="@mipmap/icon_arrow_right" />


</LinearLayout>