<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".module.mine.personal.PersonalActivity">


    <com.hjq.bar.TitleBar
        android:id="@+id/commonTitleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/personal" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="154dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/default_headimage" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@mipmap/camera" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:text="ID：12345678"
            android:textColor="#333333"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_marginTop="2dp"
            android:text="上传真实头像更容易提高求职成功率"
            android:textColor="#3AA7FF"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.boc.jobleader.custom.SettingBar
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:bar_leftText="@string/name"
        app:bar_rightText="张三"
        app:bar_rightIcon="@mipmap/icon_arrow_right" />

    <com.boc.jobleader.custom.SettingBar
        android:id="@+id/sex"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:bar_leftText="@string/sex"
        app:bar_rightText="男"
        app:bar_rightIcon="@mipmap/icon_arrow_right" />

    <com.boc.jobleader.custom.SettingBar
        android:id="@+id/brithday"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:bar_leftText="@string/brithday"
        app:bar_rightText="2020.07.29"
        app:bar_rightIcon="@mipmap/icon_arrow_right" />


</LinearLayout>