<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".module.mine.changemobile.ChangeMobileActivity">

    <com.hjq.bar.TitleBar
        android:id="@+id/commonTitleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/changeMobile" >

    </com.hjq.bar.TitleBar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="143dp">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="当前手机号"
            android:textColor="#999999"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="199****5555"
            android:textColor="#151515"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.boc.jobleader.custom.RegexEditText
        android:id="@+id/verifyPhoneInput"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:drawableStart="@drawable/phone_ic"
        android:drawablePadding="15dp"
        android:hint="@string/inputNewPhone"
        android:inputType="number"
        android:paddingHorizontal="20dp"
        android:paddingVertical="18dp"
        android:singleLine="true"
        app:regexType="mobile" />

    <View
        style="@style/HorizontalLineStyle"
        android:layout_marginHorizontal="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/veryfyCodeInput"
            style="@style/EditTextStyle"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:drawableStart="@drawable/safe_ic"
            android:drawablePadding="15dp"
            android:hint="@string/inputVeryfy"
            android:inputType="number"
            android:maxLength="@integer/sms_code_length"
            android:paddingHorizontal="20dp"
            android:paddingVertical="18dp"
            android:singleLine="true" />

        <com.boc.jobleader.custom.CountdownView
            android:id="@+id/sendCodeButton"
            style="@style/CountdownViewStyle" />

    </LinearLayout>

    <View
        style="@style/HorizontalLineStyle"
        android:layout_marginHorizontal="20dp" />

    <Button
        android:id="@+id/okButton"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/bg_blue_radius_5_shape"
        android:text="@string/sureChangeButton"
        android:textColor="#FFFFFF" />


</LinearLayout>