<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".module.mine.authentication.AuthenticationActivity">


    <com.hjq.bar.TitleBar
        android:id="@+id/commonTitleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/authentication" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/companyView"
        android:layout_width="match_parent"
        android:layout_height="78dp">

        <ImageView
            android:id="@+id/companyId"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="19dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/icon_authentication_comp" />

        <TextView
            android:id="@+id/companyName"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="21dp"
            android:text="@string/companyAuth"
            android:textColor="#333333"
            app:layout_constraintStart_toEndOf="@+id/companyId"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/authentication" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:text="@string/companyAuthExplain"
            android:textColor="#999999"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/companyId"
            app:layout_constraintTop_toBottomOf="@+id/companyName" />

        <ImageView
            android:id="@+id/onerightArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/icon_arrow_right" />

        <TextView
            android:id="@+id/companyStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="未认证"
            android:textColor="#CCCCCC"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/onerightArrow"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="#ECECEC"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="78dp">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="19dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/icon_authentication_man" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="21dp"
            android:text="@string/assessAuth"
            android:textColor="#333333"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/authentication" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:text="@string/assessAuthExplain"
            android:textColor="#999999"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/icon_arrow_right" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="未认证"
            android:textColor="#CCCCCC"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView6"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="#ECECEC"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>